--- a/index.html
+++ b/index.html
@@ -75,8 +75,29 @@
 				<div><span>6</span><span>6</span></div>
 				<div><span>8</span><span>8</span></div>
 				<div><span>10</span><span>10</span></div>
-				<div><span>12</span><span>12</span></div>
+				<div><span></span><span>12</span></div>
+				<div><span>PM</span><span>AM</span></div>
 			</div>
+			<div class="hour-hand">
+				<span></span>
+			</div>
+
+			<!-- Seconds -->
+			<div class="second-dots">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
+			<div class="second-numbers">
+				<div><span>60</span><span>30</span></div>
+			</div>
+			<div class="second-hand">
+				<span></span>
+			</div>
+
 		</div>
 	</div>
 
